<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loratracker_white_ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/loratracker_blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/loratracker_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/loratracker_white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_title"
            android:textColor="@color/loratracker_white_ffffff"
            android:textSize="17sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/loratracker_ic_logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="@color/loratracker_grey_888888"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Version:V1.0.0"
        android:textColor="@color/loratracker_grey_a8a8a8"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/company_name"
        android:textColor="@color/loratracker_black_333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_company_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:onClick="onCompanyWebsite"
        android:text="@string/company_website"
        android:textColor="@color/loratracker_blue_03bfea"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/loratracker_ic_about_bg" />
</RelativeLayout>