<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/loratracker_blue_2f84d0">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableLeft="@drawable/loratracker_ic_back"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:onClick="onBack"
            android:paddingLeft="16dp"
            android:text=""
            android:textColor="@color/loratracker_white_ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/loratracker_white_ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="onSave"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/loratracker_ic_save" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="@color/loratracker_white_ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loratracker_white_ffffff"
        android:orientation="vertical">

        <View style="@style/loratracker_divider_line" />

        <RadioGroup
            android:id="@+id/rg_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtn_adv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@drawable/loratracker_selector_adv"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/title_advertiser"
                android:textColor="@drawable/loratracker_selector_option_radiobtn_color"
                android:textSize="12sp" />


            <RadioButton
                android:id="@+id/radioBtn_scanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@drawable/loratracker_selector_scanner"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/title_scanner"
                android:textColor="@drawable/loratracker_selector_option_radiobtn_color"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioBtn_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@drawable/loratracker_selector_setting"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/title_setting"
                android:textColor="@drawable/loratracker_selector_option_radiobtn_color"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioBtn_device"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:button="@null"
                android:drawableTop="@drawable/loratracker_selector_device"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/title_device"
                android:textColor="@drawable/loratracker_selector_option_radiobtn_color"
                android:textSize="12sp" />

        </RadioGroup>
    </LinearLayout>

</LinearLayout>